fix: sidebar overlap model preivew

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -594,3 +594,7 @@
     opacity: 1;
   }
 }
+
+.sidebar-overlay {
+  background: rgba($color: #f8f5f1, $alpha: 0.5);
+}
